--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,10 @@
 }
 body {
   margin: 0;
-  padding: 20px;
+  padding: 30px;
   font-family: "Poppins";
   background: var(--secondary);
+  overflow-x: hidden;
 }
 * {
   color: #fff;
@@ -104,7 +105,24 @@ form label span {
 }
 
 /* careers list */
-
+.careers > a {
+  display: block;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  border-radius: 4px;
+  margin: 20px 0;
+  text-decoration: none;
+}
+.careers > a:hover p {
+  color: var(--primary);
+}
+.careers p {
+  margin: 0;
+}
+.careers > a p:last-child {
+  font-size: 0.8em;
+  color: #bbb;
+}
 /* careers details */
 
 /* breadcrumbs */
@@ -113,9 +131,8 @@ form label span {
   position: absolute;
   bottom: 0;
   display: flex;
-  height: 30px;
+  height: 50px;
   width: 100vw;
   justify-content: center;
   align-items: center;
-  background-color: #bc4123;
 }
